2005-01-07  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds70.cs : 
	- add a special case for datetime parameters to convert to
	invariant culture. fixes bug #70209.
	- change format to MMM dd yyyy, this works for both client locale
	change and server login locale change. fixes bug #66564.

2005-01-06  Sureshkumar T  <tsureshkumar@novell.com>

	* Tds.cs: change the typecast to ushort for
	GetDateTimeValue. fixes bug #70651.

2004-11-06 Gert Driesen <drieseng@users.sourceforge.net>
	* Tds70.cs: avoid unnecessary property call.	

2004-11-01 Gert Driesen <drieseng@users.sourceforge.net>
	
	* Tds70.cs: when type of parameter value is enum, convert value to
	underlying type before converting value to string as we'd otherwise
	be using the enum field name

2004-10-30 Umadevi S <sumadevi@novell.com>
	* Tds.cs : GetColumnValue method: handling null guid values correctly.
		This fixes bug #68804. 
		Thanks for the patch /bug report by Aleksandar Dezelin

2004-10-14 Umadevi S <sumadevi@novell.com>
	* Tds.cs : GetTextValue method- handling zero length string correctly
		This fixes bug #67916

2004-08-14 Geoff Norton <gnorton@customerdna.com>

	* TdsComm.cs: 
          Tds70.cs: 
                Make Tds70 work on Big Endian machines.
		BitConverter uses unsafe and returns things in host order; we need to 
		swap some values to put them back into the approrpiate order for the wire.

2004-08-09 Sureshkumar T <tsureshkumar@novell.com>
	* Tds70.cs - Prepare Method stored procedure handle read problem fixed.

2004-06-30 Umadevi S <sumadevi@novell.com>
	* Tds.cs - In the NextResult method handling TdsPacketSubType. TableName. 


2004-04-22  Sebastien Pouliot <sebastien@ximian.com> 

	* Tds70.cs: Updated to match changes in Mono.Security.dll.

2004-04-05  Lluis Sanchez Gual  <lluis@ximian.com>

	* ITds.cs: Added method for reseting a connection.
	* Tds.cs: Added base implementation for ITds.Reset.
	* Tds70.cs: Implemented ITds.Reset().